# memoryos

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: export.py  health.py  memories.py  search.py  sessions.py  stats.py  summarize.py  tags.py
backend/app/core/: config.py  database.py  vector_store.py
backend/app/models/: __init__.py  memory.py  session.py  source.py  tag.py
backend/app/schemas/: __init__.py  memory.py  search.py  session.py  tag.py
backend/app/services/: embedding_service.py  extractor.py  memory_service.py  search_service.py  summarizer.py
backend/app/workers/: background.py
backend/cli/: main.py
docs/: API.md  ARCHITECTURE.md  INSTALL.md  PRIVACY.md
extension/: background.ts  manifest.json  package.json  tsconfig.json
extension/content/: chatgpt.ts  claude.ts  gemini.ts  generic.ts
extension/popup/: popup.css  popup.html  popup.ts
frontend/: next.config.js  next.config.mjs  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/export/: page.tsx
frontend/src/app/memories/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/sessions/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: MemoryCard.tsx  SearchBar.tsx  SessionTimeline.tsx  Sidebar.tsx  SourceBadge.tsx  StatsWidget.tsx
frontend/src/hooks/: useMemories.ts  useSearch.ts
frontend/src/lib/: api.ts
scripts/: build-extension.sh  install.sh
