[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoryos"
version = "1.0.0"
description = "Your AI finally remembers you — local-first AI memory layer"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ossama Hashim", email = "samo.hossam@gmail.com" }]
requires-python = ">=3.11"
keywords = ["ai", "memory", "llm", "rag", "local", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "groq>=0.9.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
postgres = ["asyncpg>=0.29.0"]
redis = ["redis[asyncio]>=5.0.0"]
encryption = ["sqlcipher3>=0.5.0"]

[project.scripts]
memoryos = "cli.main:main"

[project.urls]
Homepage = "https://github.com/SamoTech/memoryos"
Repository = "https://github.com/SamoTech/memoryos"
Documentation = "https://github.com/SamoTech/memoryos/tree/main/docs"
BugTracker = "https://github.com/SamoTech/memoryos/issues"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
