[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memoryos-local"
version = "1.0.0"
description = "Local-first AI memory layer — gives any AI assistant persistent, searchable memory"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ossama Hashim", email = "samo.hossam@gmail.com"}]
keywords = ["ai", "memory", "llm", "local", "privacy", "chatgpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
]

[project.scripts]
memoryos = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/SamoTech/memoryos"
Repository = "https://github.com/SamoTech/memoryos"
Issues = "https://github.com/SamoTech/memoryos/issues"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
